--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     margin-top: -180px;    /* Espaçamento padrão para desktop */
 }
-@supports (-webkit-appearance: none) and (max-width: 1200px) {
+@supports (-webkit-appearance: auto) and (max-width: 1200px) {
     .masthead {
         margin-top: -180px; /* Ajuste para laptops menores */
     }
