--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     /* Estilos padrão */
 .masthead {
 
-    margin-top: -180px;    /* Espaçamento padrão para desktop */
+    margin-top: -250px;    /* Espaçamento padrão para desktop */
 }
-@supports (-webkit-appearance: auto) and (max-width: 1200px) {
+@supports (--moz-appearance: auto) and (max-width: 1200px) {
     .masthead {
         margin-top: -250px; /* Ajuste para laptops menores */
     }
