--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     /* Estilos padrão */
 .masthead {
 
-    margin-top: -250px;    /* Espaçamento padrão para desktop */
+    margin-top: -200px;    /* Espaçamento padrão para desktop */
 }
-@supports (--moz-appearance: auto) and (max-width: 1200px) {
+@supports (-webkit-appearance: auto) and (max-width: 1200px) {
     .masthead {
-        margin-top: -250px; /* Ajuste para laptops menores */
+        margin-top: -200px; /* Ajuste para laptops menores */
     }
 }
 /* Ajuste para telas menores */
 @media (max-width: 1200px) {
     .masthead {
-        margin-top: -250px; /* Ajuste para laptops menores */
+        margin-top: -200px; /* Ajuste para laptops menores */
     }
 }
 
