--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     margin-top: -180px;    /* Espaçamento padrão para desktop */
 }
 @media (max-width: 1200px) {
-    @supports (-webkit-appearance: auto) {
+    @supports (-webkit-appearance: none) {
         .masthead {
             margin-top: -350px; /* Ajuste para Chrome e Edge em laptops menores */
         }
